--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -84,6 +84,10 @@
   margin-left: -20px;
 }
 
+.container .filters .locations .popover h2 {
+  font-size: 16px;
+}
+
 .container .filters .amenities .popover {
   display: none;
   background-color: #fafafa;
